--- a/style.css
+++ b/style.css
@@ -249,3 +249,21 @@ header {
 .hidden {
   display: none;
 }
+
+#toggleBtn{
+  margin: 20px auto;
+  display: block;
+  padding: 10px 20px;
+  background-color: #6a0dad;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
+}
+
+.toggle-switch:hover {
+  background-color: #580e94;
+}
