--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Secure Sans Pro", serif;
   margin: 0;
   padding: 0;
   background-color: #f5f5f5;
@@ -40,7 +40,7 @@ body {
 }
 
 .sidebar ul li a:hover {
-  background: #34495e;
+  background: #169942;
 }
 
 /* Main Content */
@@ -56,6 +56,9 @@ header {
   padding: 10px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+}
+header h1 {
+  font-weight: 700; /* or 600, 500, etc. */
 }
 
 /* Google Map */
